--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document Title</title>
+</head>
+
+<body>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+
+    <nav>
+        <!-- Navigation links can go here -->
+    </nav>
+
+    <main>
+        <section>
+            <h2>Section Title</h2>
+            <p>This is a paragraph.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Copyright © 2023</p>
+    </footer>
+</body>
+
+</html>
