--- a/index.html
+++ b/index.html
@@ -5,27 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to My Website</h1>
-    </header>
+    <div class="sidebar">
+        <img src="resources/profile_pic.jpg" alt="Profile Picture" id="profilePic"> <!-- Profile Picture -->
+        <a class="profileName" href="index.html">Joseph Haenel</a> <!-- My Name Under PFP-->
+        <span class="profileDesc">Information Technology Intern @ <a class="noHref hoverable" href="https://www.shelbyelectric.coop/" target="_blank">Shelby Electric Cooperative, Inc.</a></span>
+        <span class="profileDesc">Computer Science Tutor, Research Assistant @ <a class="noHref hoverable" href="https://www.siue.edu/" target="_blank">SIUE</a></span>
+        <hr>
+        <div class="profileInfo">
+            <span class="profileDesc profileResidence">Residence:</span>
+            <span class="profileCity">Illinois</span>
+        </div>
+        <div class="profileInfo">
+            <span class="profileDesc profileResidence">City:</span>
+            <span class="profileCity">Edwardsville</span>
+        </div>
+        <div class="profileInfo">
+            <span class="profileDesc profileResidence">Age:</span>
+            <span class="profileCity" id="myAge"></span>
+        </div>
+        <hr>
+        <div class="socials">
+            <a href="https://www.linkedin.com/in/joseph-haenel/" target="_blank"><img width="75vw" height="auto" src="https://img.icons8.com/nolan/96/linkedin.png" alt="linkedin"/></a>
+            <a href="https://github.com/josephhaenel" target="_blank"><img width="75vw" height="auto" src="https://img.icons8.com/color-glass/96/github--v1.png" alt="github"/></a>
+        </div>
+    </div>
 
-    <nav>
-        <!-- Navigation links can go here -->
-    </nav>
-
-    <main>
-        <section>
-            <h2>Section Title</h2>
-            <p>This is a paragraph.</p>
-        </section>
-    </main>
+    <div class="main-content">
+        Main Content
+    </div>
 
     <footer>
-        <p>Copyright © 2023</p>
+        <p>Copyright © <span id="currentDate"></span></p>
     </footer>
 </body>
+
+<script src="script.js"></script>
 
 </html>
