--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 
                 <!-- Center aligned text -->
                 <div class="center-text">Information Technology Intern @ <a class="noHref hoverable" href="https://www.shelbyelectric.coop/" target="_blank">Shelby Electric Cooperative, Inc.</a></div>
+                <div class="center-text">Networking IT Intern @ <a class="noHref hoverable" href="https://www.shelbyelectric.coop/" target="_blank">Shelby Electric Cooperative, Inc.</a></div>
                 <div class="center-text">Teaching & Research Assistant @ <a class="noHref hoverable" href="https://www.siue.edu/" target="_blank">SIUE</a></div>
                 
                 <!-- Left and right aligned text -->
