--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <img src="resources/pfp.jpg" alt="Profile Picture" id="sidebar-pfp">
                 
                 <!-- Center aligned text -->
-                <div class="center-text">Information Technology Intern @ <a class="noHref hoverable" href="https://www.shelbyelectric.coop/" target="_blank">Shelby Electric Cooperative, Inc.</a></div>
                 <div class="center-text">Networking IT Intern @ <a class="noHref hoverable" href="https://www.shelbyelectric.coop/" target="_blank">Shelby Electric Cooperative, Inc.</a></div>
                 <div class="center-text">Teaching & Research Assistant @ <a class="noHref hoverable" href="https://www.siue.edu/" target="_blank">SIUE</a></div>
                 
@@ -42,7 +41,7 @@
             </div>
         </div>
     </div>
-    <div id="scrollUpText">Scroll Up</div>
+    <div id="scrollUpText">Scroll Down</div>
     <script src="script.js"></script>
 </body>
 
